--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
       <div class="w-100">
         <h2 class="mb-5">Softwares/Tools/Packages</h2>
 
-        <p class="mb-0">MathFeature Package - Feature Extraction: <a href="https://github.com/Bonidia/MathFeature">https://github.com/Bonidia/MathFeature</a></p>
+        <p class="mb-0"><a href="https://github.com/Bonidia/MathFeature">[Link]</a> MathFeature Package - Feature Extraction</p>
         
         </br>
 
@@ -524,32 +524,6 @@
         <p class="mb-0">Code to extract features using k-mer descriptor: <a href="https://github.com/Bonidia/kmerSchemaPython">https://github.com/Bonidia/kmerSchemaPython</a></p>
 
     </section>
-
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="prese">
-      <div class="w-100">
-        <h2 class="mb-5">Presentations</h2>
-        <p class="mb-0">BONIDIA, R. P.; DE CARVALHO, ANDRE C. P. L. F. ; PASCHOAL, A. R.; SANCHES, D. S. Selecting the Most Relevant Features for the Identification of Long Non-Coding RNAs in Plants. 2019.</p>
-
-        </br>
-
-        <p class="mb-0">BONIDIA, ROBSON PARMEZAN; SAMPAIO, L. D. H.; LOPES, F. M.; SANCHES, DANILO S. Feature Extraction of Long Non-coding RNAs: A Fourier and Numerical Mapping Approach. 2019.</p>  
-
-        </br>
-
-        <p class="mb-0">BONIDIA, R. P.; NEGRI, T.; ALVES, W.; DOMINGUES, D. S.; KASHIWABARA, A.; PASCHOAL, A.; SANCHES, D. S. Seleção de Caracterı́sticas em RNAs Longos Não Codificantes de Plantas: Uma Abordagem Heurı́stica com Otimização por Enxame de                  Partı́culas. 2018.</p>  
-
-        </br>
-
-        <p class="mb-0">BONIDIA, R. P.; NEGRI, T.; PEREIRA, H.; ALVES, W.; DOMINGUES, D. S.; KASHIWABARA, A.; PASCHOAL, A.; SANCHES, D. S. Feature Selection of Long Non-Coding RNAs in Plants: A Heuristic Approach with Particle Swarm Optimization. 2018.</p>  
-
-        </br>
-
-        <p class="mb-0">BONIDIA, R. P.; RODRIGUES, L. A. L.; BRANCHER, J. D.; CARMO, R. S.; MASSAE, C. Sistema Integrado de Gestão Esportiva: Uma Ferramenta de Apoio ao Programa Talento Olímpico do Paraná. 2017.</p>  
-    </section>
-
 
   </div>
 
