--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <a class="nav-link js-scroll-trigger" href="#production2">Technical Production</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="Awards">Awards</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#soft">Softwares</a>
@@ -507,39 +507,21 @@
             Instituição de registro: INPI - Instituto Nacional da Propriedade Industrial.</p>
     </section>
 
-    <!--<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
-        <div class="w-100">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-          </ul>
-        </div>
-      </section>-->
+   <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Awards">
+      <div class="w-100">
+        <h2 class="mb-5">Awards</h2>
+        <ul class="fa-ul mb-0">
+           <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://blog.google/intl/pt-br/novidades/conheca-os-vencedores-do-premio-lara-2021-o-programa-de-bolsas-de-pesquisa-do-google/">[Link 1] 
+              <a href="https://research.google/outreach/featured-research-collaborations/latin-america-research-awards/recipients/">[Link 2] 
+              Latin America Research Awards (LARA), Google. Project: BioAutoML: Automated Feature Engineering for Classification of Biological Sequences. 
+           </li>
+        </ul>
+      </div>
+    </section>
 
 
     <hr class="m-0">
