--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <a class="nav-link js-scroll-trigger" href="#production2">Technical Production</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="Awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="awards">Awards</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#soft">Softwares</a>
@@ -509,7 +509,7 @@
 
    <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Awards">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards</h2>
         <ul class="fa-ul mb-0">
