--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
         <ul class="fa-ul mb-0">
            <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="https://blog.google/intl/pt-br/novidades/conheca-os-vencedores-do-premio-lara-2021-o-programa-de-bolsas-de-pesquisa-do-google/">[Link 1] 
-              <a href="https://research.google/outreach/featured-research-collaborations/latin-america-research-awards/recipients/">[Link 2] 
+            <a href="https://blog.google/intl/pt-br/novidades/conheca-os-vencedores-do-premio-lara-2021-o-programa-de-bolsas-de-pesquisa-do-google/">[Link 1]</a> 
+            <a href="https://research.google/outreach/featured-research-collaborations/latin-america-research-awards/recipients/">[Link 2]</a> 
               Latin America Research Awards (LARA), Google. Project: BioAutoML: Automated Feature Engineering for Classification of Biological Sequences. 
            </li>
         </ul>
