--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <a class="nav-link js-scroll-trigger" href="#production2">Technical Production</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#soft">Softwares</a>
