--- a/index.html
+++ b/index.html
@@ -516,7 +516,8 @@
            <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://blog.google/intl/pt-br/novidades/iniciativas/conheca-os-vencedores-do-premio-lara-2021-o-programa-de-bolsas-de-pesquisa-do-google/">[Link 1]</a> 
-            <a href="https://research.google/outreach/featured-research-collaborations/latin-america-research-awards/recipients/">[Link 2]</a> 
+            <a href="http://www.cemeai.icmc.usp.br/component/k2/item/1255-programa-de-bolsas-do-google-premia-trabalhos-orientados-pelo-cemeai">[Link 2]</a> 
+            <a href="https://research.google/outreach/featured-research-collaborations/latin-america-research-awards/recipients/">[Link 3]</a> 
               Latin America Research Awards (LARA), Google, 2021. Project: BioAutoML: Automated Feature Engineering for Classification of Biological Sequences. 
            </li>
         </ul>
