--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <br/>
           Orcid iD: <a href="https://orcid.org/0000-0003-4975-7867">0000-0003-4975-7867</a>
         </div>
-        <p class="lead mb-5">Robson P. Bonidia is a Ph.D. student in Computer Science and Computational Mathematics at the University of São Paulo - USP. 
+        <p class="lead mb-5">Robson P. Bonidia is a Ph.D. Candidate in Computer Science and Computational Mathematics at the University of São Paulo - USP. 
         He received an MSc degree in Bioinformatics from the Federal University of Technology - Paraná (UTFPR), Brazil. 
         He was one of the winners of the Latin America Research Awards (LARA) in 2021, an award promoted by Google, with the BioAutoML research project. 
         His main research topics are in computational biology and pattern recognition, feature extraction and selection, 
