--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h1 class="mb-0">Robson P.
           <span class="text-primary">Bonidia</span>
         </h1>
-        <div class="subheading mb-5">PhD student in Computer Science and Computational Mathematics - University of São Paulo - USP
+        <div class="subheading mb-5">PhD Candidate in Computer Science and Computational Mathematics - University of São Paulo - USP
           <br/>
           Contact: <a href="robservidor@gmail.com">robservidor@gmail.com </a> or <a href="rpbonidia@gmail.com">rpbonidia@gmail.com </a>
           <br/>
