--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
           <br/>
           Orcid iD: <a href="https://orcid.org/0000-0003-4975-7867">0000-0003-4975-7867</a>
         </div>
-        <p class="lead mb-5">Robson P. Bonidia is a Ph.D. Candidate in Computer Science and Computational Mathematics at the University of São Paulo - USP. 
-        He received an MSc degree in Bioinformatics from the Federal University of Technology - Paraná (UTFPR), Brazil. 
-        He was one of the winners of the Latin America Research Awards (LARA) in 2021, an award promoted by Google, with the BioAutoML research project. 
-        His main research topics are in computational biology and pattern recognition, feature extraction and selection, 
-        metaheuristics, sports data mining.</p>
+        <p class="lead mb-5">Robson Parmezan Bonidia holds a degree in Information Security Technology from the Faculdade Estadual de 
+          Tecnologia de Ourinhos - SP (FATEC - Centro Paula Souza). He is a specialist in Computer Networks and Master's in Bioinformatics, 
+          both from the Federal University of Technology - Paraná (UTFPR), Brazil. He has experience in Computer Science, with an emphasis 
+          on the following topics: computational biology, artificial intelligence, pattern recognition, metaheuristics, and data mining. 
+          He was one of the winners of the Latin America Research Awards (LARA) in 2021, promoted by Google. Currently, a Ph.D. candidate 
+          in Computer Science and Computational Mathematics at the University of São Paulo - USP.</p>
         <div class="social-icons">
           <a href="https://br.linkedin.com/in/robson-parmezan-bonidia-8b1b8890?trk=people-guest_profile-result-card_result-card_full-click">
             <i class="fab fa-linkedin-in"></i>
