--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
           DE CARVALHO, ANDRÉ C P L F. 
           <b>MathFeature: feature extraction package for DNA, RNA and protein sequences
           based on mathematical descriptors.</b> Briefings in Bioinformatics, 
-          v. 1, p. 1-10, 2021.</p>
+          v. 1, p. 1-10, 2022.</p>
         
         </br>
 
@@ -545,7 +545,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="production2">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Project Developed as a Student or Supervisor</h2>
 
