--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
           <br/>
           Contact: <a href="rpbonidia@gmail.com">rpbonidia@gmail.com </a> or <a href="bonidia@usp.br">bonidia@usp.br </a>
           <br/>
-          Curriculum: <a href="http://lattes.cnpq.br/1572375422051077">Access</a>
+          Curriculum: <a href="CompleteCV.pdf">Access</a>
+          <br/>
+          Lattes: <a href="http://lattes.cnpq.br/1572375422051077">Access</a>
           <br/>
           Citations: <a href="https://scholar.google.com.br/citations?user=kTbx_wMAAAAJ&hl=pt-BR">Access</a>
           <br/>
