--- a/index.html
+++ b/index.html
@@ -550,7 +550,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Project Developed as a Student or Supervisor</h2>
-
+        
+        <i class="fa-li fa fa-book text-warning"></i>
         <p class="mb-0">BioAutoML: Democratizing Machine Learning in Life Sciences.</p>
 
         </br>
