--- a/index.html
+++ b/index.html
@@ -622,8 +622,10 @@
             <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href=""></a>
-            Research & Training Grant/Award - Federation of European Microbiological Societies (FEMS), 2023 (USD: 5.000,00).
+            Research & Training Grant/Award - Federation of European Microbiological Societies (FEMS), 2023 (€: 5.000,00).
            </li>
+      
+          </br>
                 
            <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
