--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
             <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href=""></a>
-            Research & Training Grant/Award - Federation of European Microbiological Societies (FEMS), 2023 (€: 5.000,00).
+            FEMS Research & Training Grant/Award - Federation of European Microbiological Societies (FEMS), 2023 (€: 5.000,00).
            </li>
       
           </br>
