--- a/index.html
+++ b/index.html
@@ -90,17 +90,13 @@
           <br/>
           Orcid iD: <a href="https://orcid.org/0000-0003-4975-7867">0000-0003-4975-7867</a>
         </div>
-        <p class="lead mb-5">Robson Parmezan Bonidia holds a degree in Information Security Technology from the 
-          Faculdade Estadual de Tecnologia de Ourinhos - SP (FATEC - Centro Paula Souza). He 
-          is a specialist in Computer Networks and Master's in Bioinformatics, both from the 
-          Federal University of Technology - Paraná (UTFPR), Brazil. He has experience in 
-          Computer Science, with an emphasis on the following topics: computational biology, 
-          artificial intelligence, pattern recognition, metaheuristics, and data mining. 
-          He was one of the winners of the Latin America Research Awards (LARA) in 2021, 
-          promoted by Google. Finalist (Top 15 of 82), Falling Walls Lab Brazil 2022, 
-          promoted by Falling Walls Foundation, the German Center for Science and Innovation. 
-          Currently, a Ph.D. candidate in Computer Science and Computational Mathematics at 
-          the University of São Paulo - USP.</p>
+        <p class="lead mb-5">Robson Parmezan Bonidia is a Ph.D. candidate in Computer Science and Computational Mathematics 
+          at the University of São Paulo - USP. He holds a Master's degree in Bioinformatics and a specialist in Computer Networks, 
+          both from the Federal University of Technology - Paraná (UTFPR), Brazil. He has experience in Computer Science, 
+          with an emphasis on the following topics: computational biology, artificial intelligence, pattern recognition, 
+          metaheuristics, and data mining. He was one of the winners of the Latin America Research Awards (LARA) in 2021, 
+          promoted by Google. Finalist (Top 15 of 82), Falling Walls Lab Brazil 2022, promoted by Falling Walls Foundation, 
+          the German Center for Science and Innovation.</p>
 
         <div class="social-icons">
           <a href="https://br.linkedin.com/in/robson-parmezan-bonidia-8b1b8890?trk=people-guest_profile-result-card_result-card_full-click">
