--- a/index.html
+++ b/index.html
@@ -613,10 +613,9 @@
             <a href="-">[Link 2]</a> 
             <a href="https://educadortransformador.com.br/">[Link 3]</a> 
             <a href="-">[Link 4]</a> 
-            10 finalists in the Higher Education Category - Transforming Educator Award, 2023. 
-            Elected among the 70 finalists (among the 10 finalists in the Higher Education Category - Total of 2897 subscribers - 
-            BioFatecou project (Fatec Ourinhos) in the Transforming Educator Award, which aims to select the most transformative 
-            projects in Brazil, 2023.
+            10 finalists in the Higher Education Category - Transforming Educator Award, 2023. Elected among the 70 finalists 
+            (among the 10 finalists in the Higher Education Category - Total of 2897 subscribers - BioFatecou project) 
+            in the Transforming Educator Award, which aims to select the most transformative projects in Brazil, 2023.
            </li>
         
            </br>
