--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
            <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://conteudo.significare.org.br/finalistas_premio-educador-transformador">[Link 1]</a> 
-            <a href="-">[Link 2]</a> 
+            <a href="https://www.cps.sp.gov.br/professor-da-fatec-ourinhos-chega-a-final-do-premio-educador-transformador/">[Link 2]</a> 
             <a href="https://educadortransformador.com.br/">[Link 3]</a> 
             <a href="-">[Link 4]</a> 
             Finalist in the Higher Education Category (Among the 10 finalists in the Higher Education Category - 2897 subscribers - 
