--- a/index.html
+++ b/index.html
@@ -90,13 +90,25 @@
           <br/>
           Orcid iD: <a href="https://orcid.org/0000-0003-4975-7867">0000-0003-4975-7867</a>
         </div>
-        <p class="lead mb-5">Robson Parmezan Bonidia is a Ph.D. candidate in Computer Science and Computational Mathematics 
-          at the University of São Paulo - USP. He holds a Master's degree in Bioinformatics and a specialist in Computer Networks, 
-          both from the Federal University of Technology - Paraná (UTFPR), Brazil. He has experience in Computer Science, 
-          with an emphasis on the following topics: computational biology, artificial intelligence, pattern recognition, 
-          metaheuristics, and data mining. He was one of the winners of the Latin America Research Awards (LARA) in 2021, 
-          promoted by Google. Finalist (Top 15 of 82), Falling Walls Lab Brazil 2022, promoted by Falling Walls Foundation, 
-          the German Center for Science and Innovation.</p>
+        <p class="lead mb-5">
+          My name is Robson Parmezan Bonidia, I'm a Ph.D. candidate in Computer Science and Computational Mathematics at the University of São Paulo - USP, Brazil. 
+          I also have a degree in Information Security Technology from the Faculdade Estadual de Tecnologia de Ourinhos - SP (FATEC - Centro Paula Souza - Brazil), 
+          a specialist in Computer Networks and a Master's in Bioinformatics, both from the Federal University of Technology - Paraná (UTFPR), Brazil. 
+          I have experience in Computer Science, with an emphasis on artificial intelligence, pattern recognition, metaheuristics, computational biology, and 
+          data mining. My objectives are to contribute to society, generating Artificial Intelligence (AI) solutions that directly impact the lives of people who 
+          need them. Currently, I have been working on building solutions to democratize AI, specifically Machine Learning (ML) in biology. So far, our studies have 
+          generated results that can be applied in the study of biological sequences, having a high potential to significantly reduce the experience required to use 
+          AI/ML pipelines, helping researchers in combating various problems, such as diseases that directly impact people's lives, mainly in low- and middle-income 
+          countries, giving biologists and other stakeholders, an opportunity for widespread use of these techniques. Our studies have achieved awards and publications 
+          in high-impact journals. n 2021, our project called BioAutoML was elected by LARA-Google among the 24 most promising ideas in Latin America 
+          (24 awarded projects from a base of 700 submissions), winning the Google Latin America Research Awards (LARA), promoted by Google. In 2022, the same project 
+          was a finalist (Top 15 of 82) in the Ideas Contest, called Falling Walls Lab Brazil 2022, promoted by the Falling Walls Foundation (DAAD - German Center for 
+          Science and Innovation). I was awarded two scholarships to conduct my research in Germany (Helmholtz Centre for Environmental Research - Leipzig, Saxony, 
+          Germany), among them: (1) Research & Training Grant/Award - Federation of European Microbiological Societies (FEMS); (2) Helmholtz Visiting Researcher 
+          Grant/Award - Helmholtz Information & Data Science Academy (HIDA). In addition, some contributions were published as scientific articles. Finally, my 
+          project BioFatecou, which aims to introduce undergraduate students to the conscious use of AI (AI for good), was a finalist in the Higher Education Category 
+          (Among the 10 finalists - 2897 subscribers), Transformer Educator Award, which aims to select the most transformative projects in Brazil, in 2023.
+        </p>
 
         <div class="social-icons">
           <a href="https://br.linkedin.com/in/robson-parmezan-bonidia-8b1b8890?trk=people-guest_profile-result-card_result-card_full-click">
