--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
           generated results that can be applied in the study of biological sequences, having a high potential to significantly reduce the experience required to use 
           AI/ML pipelines, helping researchers in combating various problems, such as diseases that directly impact people's lives, mainly in low- and middle-income 
           countries, giving biologists and other stakeholders, an opportunity for widespread use of these techniques. Our studies have achieved awards and publications 
-          in high-impact journals. n 2021, our project called BioAutoML was elected by LARA-Google among the 24 most promising ideas in Latin America 
+          in high-impact journals. In 2021, our project called BioAutoML was elected by LARA-Google among the 24 most promising ideas in Latin America 
           (24 awarded projects from a base of 700 submissions), winning the Google Latin America Research Awards (LARA), promoted by Google. In 2022, the same project 
           was a finalist (Top 15 of 82) in the Ideas Contest, called Falling Walls Lab Brazil 2022, promoted by the Falling Walls Foundation (DAAD - German Center for 
           Science and Innovation). I was awarded two scholarships to conduct my research in Germany (Helmholtz Centre for Environmental Research - Leipzig, Saxony, 
           Germany), among them: (1) Research & Training Grant/Award - Federation of European Microbiological Societies (FEMS); (2) Helmholtz Visiting Researcher 
           Grant/Award - Helmholtz Information & Data Science Academy (HIDA). In addition, some contributions were published as scientific articles. Finally, my 
-          project BioFatecou, which aims to introduce undergraduate students to the conscious use of AI (AI for good), was a finalist in the Higher Education Category 
+          project, called BioFatecou, which aims to introduce undergraduate students to the conscious use of AI (AI for good), was a finalist in the Higher Education Category 
           (Among the 10 finalists - 2897 subscribers), Transformer Educator Award, which aims to select the most transformative projects in Brazil, in 2023.
         </p>
 
