--- a/index.html
+++ b/index.html
@@ -561,8 +561,8 @@
       <div class="w-100">
         <h2 class="mb-5">Project Developed as a Student or Supervisor</h2>
         
-        <li><i class="fa fa-graduation-cap" aria-hidden="true"></i>
-        <p class="mb-0">BioAutoML: Democratizing Machine Learning in Life Sciences.</p></li>
+        <i class="fa fa-graduation-cap" aria-hidden="false"></i>
+        <p class="mb-0">BioAutoML: Democratizing Machine Learning in Life Sciences.</p>
 
         </br>
         
