--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
       <div class="w-100">
         <h2 class="mb-5">Project Developed as a Student or Supervisor</h2>
         
-        <i class="fa fa-graduation-cap" aria-hidden="false"></i>
+        <i class="fa fa-graduation-cap text-warning"></i>
         <p class="mb-0">BioAutoML: Democratizing Machine Learning in Life Sciences.</p>
 
         </br>
