--- a/index.html
+++ b/index.html
@@ -560,8 +560,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Project Developed as a Student or Supervisor</h2>
+        <ul class="fa-ul mb-0">
         
-        <i class="fa fa-graduation-cap text-warning"></i>
+        <i class="fa fa-graduation-cap" aria-hidden="true"></i>
         <p class="mb-0">BioAutoML: Democratizing Machine Learning in Life Sciences.</p>
 
         </br>
@@ -599,6 +600,7 @@
         <i class="fa fa-graduation-cap" aria-hidden="true"></i>
         <p class="mb-0">Predicting Playoff Winners: A Case Study with Machine Learning in American Football Matches.</p>
 
+    </ul>
     </section>
 
    <hr class="m-0">
