--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="production2">
       <div class="w-100">
         <h2 class="mb-5">Technical Production</h2>
 
@@ -557,7 +557,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Project Developed as a Student or Supervisor</h2>
         <ul class="fa-ul mb-0">
