--- a/index.html
+++ b/index.html
@@ -633,13 +633,26 @@
         <h2 class="mb-5">Awards/Grants/ScholarShips</h2>
         <ul class="fa-ul mb-0">
 
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="http://www.saocarlos.usp.br/cemeai-apoia-projeto-selecionado-em-chamada-global-para-ia-na-saude-publica/">[Link 1]</a> 
+            <a href="https://cemeai.icmc.usp.br/cemeai-apoia-projeto-selecionado-em-chamada-global-para-ia-na-saude-publica/">[Link 2]</a> 
+            <a href="https://ai4pep.org/our-projects/">[Link 3]</a> 
+            <a href="https://ai4pep.org/our-hubs/">[Link 4]</a> 
+            AutoAI-Pandemics, which was selected as one of the most promising proposals (a total of 221 proposals from 47 countries following a rigorous review process 
+            (142 from Africa, 40 from Asia, 26 from LAC, 12 from MENA)) in a global competition, held by the Global South Artificial Intelligence for Pandemic and 
+            Epidemic Preparedness and Response Network - AI4PEP - CAN$362,500.
+           </li>
+          
+           </br>
+          
            <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://blog.google/intl/pt-br/novidades/iniciativas/conheca-os-vencedores-do-premio-lara-2021-o-programa-de-bolsas-de-pesquisa-do-google/">[Link 1]</a> 
             <a href="http://www.cemeai.icmc.usp.br/component/k2/item/1255-programa-de-bolsas-do-google-premia-trabalhos-orientados-pelo-cemeai">[Link 2]</a> 
             <a href="https://research.google/outreach/past-programs/latin-america-research-awards/">[Link 3]</a> 
             <a href="https://www.npdiario.com.br/cidades/norte-pioneirense-e-premiado-pelo-google/">[Link 4]</a> 
-            Google Latin America Research Awards (LARA), Google, 2021. Project: BioAutoML:Automated Feature Engineering for Classification of Biological 
+            Google Latin America Research Awards (LARA), Google, 2021. Project: BioAutoML: Automated Feature Engineering for Classification of Biological 
              Sequences. Elected by LARA-Google among the 24 most promising ideas in Latin America (24 awarded projects, from a base of 700 submissions). 
              Scholarship: 2022-2023 (USD: 14.400,00). 
            </li>
