--- a/index.html
+++ b/index.html
@@ -91,25 +91,31 @@
           Orcid iD: <a href="https://orcid.org/0000-0003-4975-7867">0000-0003-4975-7867</a>
         </div>
         <p class="lead mb-5">
-          My name is Robson Parmezan Bonidia, I'm a Ph.D. candidate in Computer Science and Computational Mathematics at the University of São Paulo - USP, 
-          Brazil. I also have a degree in Information Security Technology from the Faculdade Estadual de Tecnologia de Ourinhos - SP (FATEC - Centro Paula 
-          Souza - Brazil), a specialist in Computer Networks and a Master's in Bioinformatics, both from the Federal University of Technology - Paraná (UTFPR), 
-          Brazil. I have experience in Computer Science, with an emphasis on artificial intelligence, pattern recognition, metaheuristics, computational biology, 
-          and data mining. My objectives are to contribute to society, generating Artificial Intelligence (AI) solutions that directly impact the lives of people 
-          who need them. Currently, I have been working on building solutions to democratize AI, specifically Machine Learning (ML) in biology. So far, 
-          our studies have generated results that can be applied in the study of biological sequences, having a high potential to significantly reduce the 
-          experience required to use AI/ML pipelines, helping researchers in combating various problems, such as diseases that directly impact people's lives, 
-          mainly in low- and middle-income countries, giving biologists and other stakeholders, an opportunity for widespread use of these techniques. 
-          Our studies have achieved awards and publications in high-impact journals. In 2021, our project called BioAutoML was elected by LARA-Google among the 
-          24 most promising ideas in Latin America (24 awarded projects from a base of 700 submissions), winning the Google Latin America Research Awards (LARA), 
-          promoted by Google. In 2022, the same project was a finalist (Top 15 of 82) in the Ideas Contest, Falling Walls Lab Brazil 2022, promoted by the 
-          Falling Walls Foundation (DAAD - German Center for Science and Innovation). I was awarded two scholarships to conduct my research in Germany 
-          (Helmholtz Centre for Environmental Research - Leipzig, Saxony, Germany), among them: (1) Research & Training Grant/Award - Federation of European 
-          Microbiological Societies (FEMS); (2) Helmholtz Visiting Researcher Grant/Award - Helmholtz Information & Data Science Academy (HIDA). In addition, 
-          some contributions were published as scientific articles. My project, called BioFatecou, which aims to introduce undergraduate students to the 
-          conscious use of AI (AI for good), was a finalist in the Higher Education Category (Among the 10 finalists - 2897 subscribers), 
-          Transformer Educator Award, which aims to select the most transformative projects in Brazil, in 2023. Finally, in the same year, the BioFatecou project 
-          won an honorable mention (more than 200 submissions), in the 25th edition of the Professor Mário Palmério Top Educational Award.
+        I'm a Ph.D. candidate in Computer Science and Computational Mathematics at the University of São Paulo - USP, Brazil. 
+          I also have a degree in Information Security Technology from the Faculdade Estadual de Tecnologia de Ourinhos - SP 
+          (FATEC - Centro Paula Souza - Brazil), a specialist in Computer Networks and a Master's in Bioinformatics, both from 
+          the Federal University of Technology - Paraná (UTFPR), Brazil. I have experience in Computer Science, with an emphasis 
+          on artificial intelligence, pattern recognition, metaheuristics, computational biology, and data mining. My objectives 
+          are to contribute to society, generating Artificial Intelligence (AI) solutions that directly impact the lives of people 
+          who need them. Currently, I have been working on building solutions to democratize AI, specifically Machine Learning (ML) 
+          in biology. So far, our studies have generated results that can be applied in the study of biological sequences, having a 
+          high potential to significantly reduce the experience required to use AI/ML pipelines, helping researchers in combating 
+          various problems, such as diseases that directly impact people's lives, mainly in low- and middle-income countries, giving 
+          biologists and other stakeholders, an opportunity for widespread use of these techniques. Our studies have achieved awards 
+          and publications in high-impact journals. In 2021, our project called BioAutoML was elected by LARA-Google among the 24 most 
+          promising ideas in Latin America (24 awarded projects from a base of 700 submissions), winning the Google Latin America 
+          Research Awards (LARA), promoted by Google. In 2022, the same project was a finalist (Top 15 of 82) in the Ideas Contest, 
+          Falling Walls Lab Brazil 2022, promoted by the Falling Walls Foundation (DAAD - German Center for Science and Innovation). 
+          I was awarded two scholarships to conduct my research in Germany (Helmholtz Centre for Environmental Research - Leipzig, Saxony,
+          Germany), among them: (1) Research & Training Grant/Award - Federation of European Microbiological Societies (FEMS); (2) Helmholtz 
+          Visiting Researcher Grant/Award - Helmholtz Information & Data Science Academy (HIDA). Moreover, my project, called BioFatecou, 
+          which aims to introduce undergraduate students to the conscious use of AI (AI for good), was a finalist in the Higher Education 
+          Category (Among the 10 finalists - 2897 subscribers), Transformer Educator Award, which aims to select the most transformative 
+          projects in Brazil, 2023. In the same year, the BioFatecou project won an honorable mention (more than 200 submissions), 
+          in the 25th edition of the Professor Mário Palmério Top Educational Award. Also, in 2023, AutoAI-Pandemics was selected as one of the 
+          most promising proposals (a total of 221 proposals from 47 countries) in a global competition, held by the Global South Artificial 
+          Intelligence for Pandemic and Epidemic Preparedness and Response Network - AI4PEP. Finally, two projects guided by me were 
+          finalists in Falling Walls Lab Brazil 2023, with the project "Breaking the Wall of Fake News" being the winner of the year.
         </p>
 
         <div class="social-icons">
