--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
             <a href="https://ai4pep.org/our-hubs/">[Link 4]</a> 
             AutoAI-Pandemics, which was selected as one of the most promising proposals (a total of 221 proposals from 47 countries following a rigorous review process 
             (142 from Africa, 40 from Asia, 26 from LAC, 12 from MENA)) in a global competition, held by the Global South Artificial Intelligence for Pandemic and 
-            Epidemic Preparedness and Response Network - AI4PEP - CAN$362,500.
+            Epidemic Preparedness and Response Network - AI4PEP - 2023 - CAN$362,500.
            </li>
           
            </br>
