--- a/index.html
+++ b/index.html
@@ -757,6 +757,15 @@
 
           </br>
 
+           <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href=""></a> 
+            Certificate of excellence for the distinction achieved at Falling Walls Lab Brazil 2023 as Advisor Professor, 
+            Faculdade Estadual de Tecnologia de Ourinhos - Fatec, 2023.
+           </li>
+
+           </br>
+
             <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://www.digitalocean.com/community/pages/hollies-hub-for-good">[Link 1]</a> 
