--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
             <a href="https://educadortransformador.com.br/">[Link 3]</a>
             Finalist in the Higher Education Category (Among the 10 finalists in the Higher Education Category - 2897 subscribers - 
             BioFatecou Project), Transformer Educator Award - Sebrae, Instituto Significare and Bett Brasil, 
-            which aims to select the most transformative projects in Brazil, 2023.
+            which aims to select the most transformative projects in Brazil, in 2023.
            </li>
 
           </br>
