--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#soft">Softwares</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#soft">News - Projects</a>
+        </li>
       </ul>
     </div>
   </nav>
