--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
       <div class="w-100">
         <h2 class="mb-5">News About Our Projects</h2>
 
-        <p class="mb-0"><a href="https://veja.abril.com.br/tecnologia/plataforma-virtual-ajuda-a-combater-epidemias-com-inteligencia-artificial/">[Link 26] - </a>VEJA - PAutoAI-Pandemics in the main Brazilian news magazine</p>
+        <p class="mb-0"><a href="https://veja.abril.com.br/tecnologia/plataforma-virtual-ajuda-a-combater-epidemias-com-inteligencia-artificial/">[Link 26] - </a>VEJA - AutoAI-Pandemics in the main Brazilian news magazine</p>
 
         </br>
 
