--- a/index.html
+++ b/index.html
@@ -868,7 +868,19 @@
       <div class="w-100">
         <h2 class="mb-5">News About Our Projects</h2>
 
-        <p class="mb-0"><a href="https://veja.abril.com.br/tecnologia/plataforma-virtual-ajuda-a-combater-epidemias-com-inteligencia-artificial/">[Link 26] - </a>VEJA - AutoAI-Pandemics in the main Brazilian news magazine</p>
+        <p class="mb-0"><a href="https://veja.abril.com.br/tecnologia/plataforma-virtual-ajuda-a-combater-epidemias-com-inteligencia-artificial/">[Link 29] - </a>VEJA - AutoAI-Pandemics in the main Brazilian news magazine</p>
+
+        </br>
+
+        <p class="mb-0"><a href="https://cemeai.icmc.usp.br/programa-de-bolsas-do-google-premia-trabalhos-orientados-pelo-cemeai/">[Link 28] - </a>Google scholarship program awards work guided by CeMEAI</p>
+
+        </br>
+
+        <p class="mb-0"><a href="https://blog.google/intl/pt-br/novidades/iniciativas/conheca-os-vencedores-do-premio-lara-2021-o-programa-de-bolsas-de-pesquisa-do-google/">[Link 27] - </a>Meet the winners of the 9th edition of LARA, Google's research grant program</p>
+
+        </br>
+
+        <p class="mb-0"><a href="https://npdiario.com.br/cidades/norte-pioneirense-e-premiado-pelo-google/">[Link 26] - </a>Google scholarship program awards Robson Bonidia</p>
 
         </br>
 
