--- a/index.html
+++ b/index.html
@@ -880,6 +880,7 @@
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="35.pdf">[Link]</a>
             1 place in the Fatec Ourinhos Public Contest, in the Natural Language Processing (PLN) discipline, Centro Paula Souza (CPS) - SP.
            </li>
 
