--- a/index.html
+++ b/index.html
@@ -852,6 +852,15 @@
 
            </br>
 
+           <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="Câmara Municipal de Ourinhos.pdf">[Link-1]</a> 
+            <a href="https://www.camaraourinhos.sp.gov.br/documento/mocao-no-405-2023-119556">[Link-2]</a> 
+            Motion No. 405/2023 (Ourinhos-SP City Council, Brazil) - Congratulations to the students and professors of Fatec Ourinhos for developing the 'ITT – Is That True' app, a platform to combat fake news, 2023.
+           </li>
+
+           </br>
+
             <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://www.digitalocean.com/community/pages/hollies-hub-for-good">[Link]</a> 
