--- a/index.html
+++ b/index.html
@@ -968,6 +968,10 @@
       <div class="w-100">
         <h2 class="mb-5">News About Our Projects</h2>
 
+        <p class="mb-0"><a href="https://www.semesp.org.br/noticias/confira-os-trabalhos-premiados-do-23o-conic-semesp/">[Link 43] - </a>Award-Winning Works from the 23rd CONIC-SEMESP</p>
+
+        <p class="mb-0"><a href="https://falling-walls.com/discover/videos/breaking-the-wall-of-fake-news-detection/">[Link 42] - </a>Falling Walls Lab - Breaking the Wall of Fake News Detection - Brazil winner</p>
+
         <p class="mb-0"><a href="https://namidia.fapesp.br/pesquisa-de-ia-orientada-no-icmcusp-vai-representar-o-brasil-na-cop-28-em-dubai/482078">[Link 41] - </a>AI research guided at ICMC/USP will represent Brazil at COP-28, in Dubai</p>
 
         </br>
