--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <p class="lead mb-5">
         I'm a Ph.D. candidate in Computer Science and Computational Mathematics at the University of São Paulo - USP, Brazil. I also have a degree in Information Security Technology from the Faculdade Estadual de Tecnologia de Ourinhos - SP 
-        (FATEC - Centro Paula Souza - Brazil), a specialist in Computer Networks and a Master's in Bioinformatics, both from the Federal University of Technology - Paraná (UTFPR), Brazil. I have experience in Computer Science, with an emphasis on artificial intelligence, pattern recognition, metaheuristics, computational biology, and data mining. My objectives are to contribute to society, generating Artificial Intelligence (AI) solutions that directly impact the lives of people  who need them. Currently, I have been working on building solutions to democratize AI, specifically Machine Learning (ML) in biology. So far, our studies have generated results that can be applied in the study of biological sequences, having a high potential to significantly reduce the experience required to use AI/ML pipelines, helping researchers in combating various problems, such as diseases that directly impact people's lives, mainly in low- and middle-income countries, giving biologists and other stakeholders, an opportunity for widespread use of these techniques. Our studies have achieved awards and publications in high-impact journals. In 2021, our project called BioAutoML was elected by LARA-Google among the 24 most promising ideas in Latin America (24 awarded projects from a base of 700 submissions), winning the Google Latin America Research Awards (LARA), promoted by Google. In 2022, the same project was a finalist (Top 15 of 82) in the Ideas Contest, Falling Walls Lab Brazil 2022, promoted by the Falling Walls Foundation (DAAD - German Center for Science and Innovation). I was awarded two scholarships to conduct my research in Germany (Helmholtz Centre for Environmental Research - Leipzig, Saxony, Germany), among them: (1) Research & Training Grant/Award - Federation of European microbiological Societies (FEMS); (2) Helmholtz  Visiting Researcher Grant/Award - Helmholtz Information & Data Science Academy (HIDA). Moreover, my project, called BioFatecou, which aims to introduce undergraduate students to the conscious use of AI (AI for good), was a finalist in the Higher Education Category (Among the 10 finalists - 2897 subscribers), Transformer Educator Award, which aims to select the most transformative projects in Brazil, 2023. In the same year, the BioFatecou project won an honorable mention (more than 200 submissions), in the 25th edition of the Professor Mário Palmério Top Educational Award. Also, in 2023, AutoAI-Pandemics was selected as one of the most promising proposals (a total of 221 proposals from 47 countries) in a global competition, held by the Global South Artificial Intelligence for Pandemic and Epidemic Preparedness and Response Network - AI4PEP. Finally, two projects guided by me were finalists in Falling Walls Lab Brazil 2023, with the project "Breaking the Wall of Fake News" being the winner of the year.
+        (FATEC - Centro Paula Souza - Brazil), a specialist in Computer Networks and a Master's in Bioinformatics, both from the Federal University of Technology - Paraná (UTFPR), Brazil. I am a Member of both the Steering Committee and Activities Committee for the Global South Artificial Intelligence for Pandemic and Epidemic Preparedness and Response Network (AI4PEP). I have experience in Computer Science, with an emphasis on artificial intelligence, pattern recognition, metaheuristics, computational biology, and data mining. My objectives are to contribute to society, generating Artificial Intelligence (AI) solutions that directly impact the lives of people  who need them. Currently, I have been working on building solutions to democratize AI, specifically Machine Learning (ML) in biology. So far, our studies have generated results that can be applied in the study of biological sequences, having a high potential to significantly reduce the experience required to use AI/ML pipelines, helping researchers in combating various problems, such as diseases that directly impact people's lives, mainly in low- and middle-income countries, giving biologists and other stakeholders, an opportunity for widespread use of these techniques. Our studies have achieved awards and publications in high-impact journals. In 2021, our project called BioAutoML was elected by LARA-Google among the 24 most promising ideas in Latin America (24 awarded projects from a base of 700 submissions), winning the Google Latin America Research Awards (LARA), promoted by Google. In 2022, the same project was a finalist (Top 15 of 82) in the Ideas Contest, Falling Walls Lab Brazil 2022, promoted by the Falling Walls Foundation (DAAD - German Center for Science and Innovation). I was awarded two scholarships to conduct my research in Germany (Helmholtz Centre for Environmental Research - Leipzig, Saxony, Germany), among them: (1) Research & Training Grant/Award - Federation of European microbiological Societies (FEMS); (2) Helmholtz  Visiting Researcher Grant/Award - Helmholtz Information & Data Science Academy (HIDA). Moreover, my project, called BioFatecou, which aims to introduce undergraduate students to the conscious use of AI (AI for good), was a finalist in the Higher Education Category (Among the 10 finalists - 2897 subscribers), Transformer Educator Award, which aims to select the most transformative projects in Brazil, 2023. In the same year, the BioFatecou project won an honorable mention (more than 200 submissions), in the 25th edition of the Professor Mário Palmério Top Educational Award. Also, in 2023, AutoAI-Pandemics was selected as one of the most promising proposals (a total of 221 proposals from 47 countries) in a global competition, held by the Global South Artificial Intelligence for Pandemic and Epidemic Preparedness and Response Network - AI4PEP. Finally, two projects guided by me were finalists in Falling Walls Lab Brazil 2023, with the project "Breaking the Wall of Fake News" being the winner of the year. 
         </p>
 
         <div class="social-icons">
@@ -188,6 +188,20 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Member, Steering Committee, and Activities Committee</h3>
+            <div class="subheading mb-3">Global South Artificial Intelligence for Pandemic and Epidemic Preparedness and Response Network (AI4PEP)</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2023 - Current</span></br>
+            <a href="http://autoaipandemics.icmc.usp.br/">[Link-1]</a>
+            <a href="https://ai4pep.org/">[Link-2]</a></br>
+            <a href="https://ai4pep.org/activities-committee/">[Link-3]</a>
+            <a href="https://ai4pep.org/steering-committee/">[Link-4]</a>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -626,10 +640,12 @@
 
            <li>
             <i class="fa-li fa fa-graduation-cap text-warning"></i>
-            <a href="https://www.instagram.com/p/Cz7DpOPMBc1/?img_index=5">[Link 1]</a>
-            <a href="https://www.semesp.org.br/conic/resultados/">[Link 2]</a> 
-            <a href="https://www.conic-semesp.org.br/anais/files/2023/trabalho-1000009805.pdf">[Link 3]</a> 
-            <a href="http://biofatecou.fatecourinhos.edu.br/">[Link 4]</a> 
+            <a href="https://www.semesp.org.br/noticias/confira-os-trabalhos-premiados-do-23o-conic-semesp/">[Link 1]</a>
+            <a href="https://www.cps.sp.gov.br/projeto-de-fatec-poe-ia-a-servico-do-combate-ao-cancer-de-mama/">[Link 2]</a>
+            <a href="https://www.instagram.com/p/Cz7DpOPMBc1/?img_index=5">[Link 3]</a>
+            <a href="https://www.semesp.org.br/conic/resultados/">[Link 4]</a> 
+            <a href="https://www.conic-semesp.org.br/anais/files/2023/trabalho-1000009805.pdf">[Link 5]</a> 
+            <a href="http://biofatecou.fatecourinhos.edu.br/">[Link 6]</a> 
              Águeda: Artificial Intelligence for Early Detection of Breast Cancer. 
            </li>
 
@@ -814,10 +830,12 @@
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            <a href="https://www.instagram.com/p/Cz7DpOPMBc1/?img_index=5">[Link 1]</a>
-            <a href="https://www.semesp.org.br/conic/resultados/">[Link 2]</a> 
-            <a href="https://www.conic-semesp.org.br/anais/files/2023/trabalho-1000009805.pdf">[Link 3]</a> 
-            <a href="http://biofatecou.fatecourinhos.edu.br/">[Link 4]</a> 
+            <a href="https://www.semesp.org.br/noticias/confira-os-trabalhos-premiados-do-23o-conic-semesp/">[Link 1]</a>
+            <a href="https://www.cps.sp.gov.br/projeto-de-fatec-poe-ia-a-servico-do-combate-ao-cancer-de-mama/">[Link 2]</a>
+            <a href="https://www.instagram.com/p/Cz7DpOPMBc1/?img_index=5">[Link 3]</a>
+            <a href="https://www.semesp.org.br/conic/resultados/">[Link 4]</a> 
+            <a href="https://www.conic-semesp.org.br/anais/files/2023/trabalho-1000009805.pdf">[Link 5]</a> 
+            <a href="http://biofatecou.fatecourinhos.edu.br/">[Link 6]</a> 
              Supervisor of the ÁGUEDA Project (Artificial Intelligence for Early Detection of Breast Cancer), recognized as the best ongoing research project in the field of Exact and Earth Sciences in Brazil for undergraduate scientific initiation by Conic-Semesp (the Largest Scientific Initiation Congress in Brazil), among more than 1,200 registered projects. 
            </li>
         
@@ -967,6 +985,11 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="news">
       <div class="w-100">
         <h2 class="mb-5">News About Our Projects</h2>
+
+        <p class="mb-0"><a href="https://www.cps.sp.gov.br/projeto-de-fatec-poe-ia-a-servico-do-combate-ao-cancer-de-mama/">[Link 44] - </a>Fatec Project Puts AI to Work in the Fight Against Breast Cancer</p>
+
+        </br>
+
 
         <p class="mb-0"><a href="https://www.semesp.org.br/noticias/confira-os-trabalhos-premiados-do-23o-conic-semesp/">[Link 43] - </a>Award-Winning Works from the 23rd CONIC-SEMESP</p>
 
