--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
       <div class="w-100">
         <h2 class="mb-5">Softwares/Tools/Packages</h2>
 
-        <p class="mb-0"><a href="#">[Link] - </a>All Softwares/Tools/Packages can be viewed in the projects section</p>
+        <p class="mb-0"><a href="#">[Link] - </a>Other Softwares/Tools/Packages can be viewed in the projects section</p>
         
         </br>
 
