--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="resume-content">
-              <h3 class="mb-0">Centro Universitário Internacional, UNINTER, Brasil</h3>
+              <h3 class="mb-0">Centro Universitário Internacional, UNINTER, Brazil</h3>
               <div class="subheading mb-3">BSc degree</div>
               <div>BSc degree in Mathematics</div>
             </div>
@@ -171,7 +171,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Fatec - Faculdade de Tecnologia de Ourinhos, FATEC, Brasil</h3>
+            <h3 class="mb-0">Fatec - Faculdade de Tecnologia de Ourinhos, FATEC, Brazil</h3>
             <div class="subheading mb-3">Associate Degree</div>
             <div> Associate Degree in Information Security</div>
             <div>Invasão de Privacidade na Era Digital e suas Consequências Legais</div>
@@ -246,7 +246,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Invited Professor</h3>
-            <div class="subheading mb-3">SENAI - Departamento Regional do Paraná, SENAI/DR/PR, Brasil.</div>
+            <div class="subheading mb-3">SENAI - Departamento Regional do Paraná, SENAI/DR/PR, Brazil.</div>
            </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">2019 - 2020</span>
@@ -276,7 +276,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">IT Assistant</h3>
-            <div class="subheading mb-3">Distr. e Transp. Carnes Suitav, SUITAV, Brasil.</div>
+            <div class="subheading mb-3">Distr. e Transp. Carnes Suitav, SUITAV, Brazil.</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">2011 - 2015</span>
@@ -764,7 +764,7 @@
             <a href="https://www.cps.sp.gov.br/professor-da-fatec-ourinhos-chega-a-final-do-premio-educador-transformador/">[Link 2]</a> 
             <a href="https://educadortransformador.com.br/">[Link 3]</a>
             Finalist in the Higher Education Category (Among the 10 finalists in the Higher Education Category - 2897 subscribers - 
-            BioFatecou Project), Transformer Educator Award - Sebrae, Instituto Significare and Bett Brasil, 
+            BioFatecou Project), Transformer Educator Award - Sebrae, Instituto Significare and Bett Brazil, 
             which aims to select the most transformative projects in Brazil, in 2023.
            </li>
 
@@ -807,7 +807,7 @@
             <a href="https://top.abmes.org.br/noticias-2/54-projeto-que-oferece-formacao-on-line-e-gratuita-sobre-competencias-empreendedoras-vence-a-25-edicao-do-premio-top-educacional">[Link 5]</a> 
             <a href="https://www.linkedin.com/feed/update/urn:li:activity:7094726276795502592/">[Link 6]</a> 
              Honorable mention to the BioFatecou Project (more than 200 submissions) - 25th edition of the Professor Mário Palmério Top Educational Award 
-             - ABMES - Associação Brasileira de Mantenedoras de Ensino Superior - Brasil - 2023 - Elected among the 5 most transformative projects in Brazil.
+             - ABMES - Associação Brasileira de Mantenedoras de Ensino Superior - Brazil - 2023 - Elected among the 5 most transformative projects in Brazil.
            </li>
         
            </br>
