--- a/index.html
+++ b/index.html
@@ -986,6 +986,11 @@
       <div class="w-100">
         <h2 class="mb-5">News About Our Projects</h2>
 
+        <p class="mb-0"><a href="https://www.instagram.com/p/C3Q3AWeLkTV/?igsh=YTA5NGhscjc0aG13">[Link 45] - </a>
+        Astronaut and Federal Senate of Brazil Marcos Pontes posts about the importance of our project</p>
+
+        </br>
+
         <p class="mb-0"><a href="https://www.cps.sp.gov.br/projeto-de-fatec-poe-ia-a-servico-do-combate-ao-cancer-de-mama/">[Link 44] - </a>Fatec Project Puts AI to Work in the Fight Against Breast Cancer</p>
 
         </br>
