--- a/index.html
+++ b/index.html
@@ -861,6 +861,14 @@
 
           </br>
 
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://sei.utfpr.edu.br/sei/publicacoes/controlador_publicacoes.php?acao=publicacao_visualizar&id_documento=4384974&id_orgao_publicacao=0">[Link]</a>
+            1 place in the UTFPR-CP Public Contest, position of Effective Federal Professor, Paraná, Brazil.
+           </li>
+
+          </br>
+
            <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="C25.pdf">[Link]</a> 
