--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#book">Books</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#production">Publications</a>
         </li>
         <li class="nav-item">
@@ -91,7 +94,8 @@
           <br/>
           Citations: <a href="https://scholar.google.com.br/citations?user=kTbx_wMAAAAJ&hl=pt-BR">Access</a>
           <br/>
-          Orcid iD: <a href="https://orcid.org/0000-0003-4975-7867">0000-0003-4975-7867</a>
+          Orcid iD: <a href="https://orcid.org/0000-0003-4975-7867">0000-0003-4975-7867</a><br/>
+          <b>See our book:</b><a href="https://www.grupogen.com.br/e-book-ciencia-de-dados-fundamentos-e-aplicacoes-andre-carlos-ponce-de-leon-ferreira-de-carvalho-editora-ltc-9788521638766"> Data science - Fundamentals and Applications</a>
         </div>
         <p class="lead mb-5">
         I have a Ph.D. in Computer Science and Computational Mathematics from the University of São Paulo - USP, Brazil. I also have a degree in Information Security Technology from the Faculdade Estadual de Tecnologia de Ourinhos - SP 
@@ -229,7 +233,7 @@
             <div class="subheading mb-3">University of São Paulo - São Carlos/Brazil (ICMC)</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2020 - Current</span>
+            <span class="text-primary">2020 - 2024</span>
           </div>
         </div>
 
@@ -393,6 +397,17 @@
             ITIL Foundation Certificate in IT Service Management, EXIN, 2013.</li>
           <li>
         </ul>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="book">
+      <div class="w-100">
+        <h2 class="mb-5">Books</h2>
+        <p class="mb-0">
+            <a href="https://www.grupogen.com.br/e-book-ciencia-de-dados-fundamentos-e-aplicacoes-andre-carlos-ponce-de-leon-ferreira-de-carvalho-editora-ltc-9788521638766">[Access]</a> CARVALHO, A. C. P. L. F.; MENEZES, A. G.; BONIDIA, R. P. Data science - Fundamentals and Applications (Portuguese). 1. ed. LTC - Grupo Gen, 2024. v. 1. 376p.
+        </p>
       </div>
     </section>
 
@@ -993,6 +1008,16 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="news">
       <div class="w-100">
         <h2 class="mb-5">News About Our Projects</h2>
+
+        <p class="mb-0"><a href="https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A7168610020199198721/">[Link 47] - </a>
+        Steering Committee Meeting, bringing together leaders from all four regions; Africa, Asia, LAC, & MENA</p>
+
+        </br>
+
+        <p class="mb-0"><a href="https://www.al.sp.gov.br/ilp/cursos-eventos/detalheAtividade.jsp?id=9866&__ncforminfo=4wusSOJgY4O6-TqIFe5L9eWGMXvuff5uSUFAvfAxuqAzLHMPbSwNtgqn7d6tIxFXl7FPJzm7o2bPlMNwjKQAvl08OFeLUx9C">[Link 46] - </a>
+        Debate at the Legislative Assembly — São Paulo — Alesp — Health in the State of São Paulo: Panorama, Challenges and Opportunities</p>
+
+        </br>
 
         <p class="mb-0"><a href="https://www.instagram.com/p/C3Q3AWeLkTV/?igsh=YTA5NGhscjc0aG13">[Link 45] - </a>
         Astronaut and Federal Senate of Brazil Marcos Pontes posts about the importance of our project</p>
