--- a/index.html
+++ b/index.html
@@ -1009,8 +1009,13 @@
       <div class="w-100">
         <h2 class="mb-5">News About Our Projects</h2>
 
-        <p class="mb-0"><a href="https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A7168610020199198721/">[Link 47] - </a>
+        <p class="mb-0"><a href="https://www.linkedin.com/feed/update/urn%3Ali%3Aactivity%3A7168610020199198721/">[Link 48] - </a>
         Steering Committee Meeting, bringing together leaders from all four regions; Africa, Asia, LAC, & MENA</p>
+
+        </br>
+
+        <p class="mb-0"><a href="https://www.youtube.com/watch?v=D9kziUjmeRc">[Link 47] - </a>
+        Dr. Robson in the Legislative Assembly — São Paulo — Alesp — Health in the State of São Paulo: Panorama, Challenges and Opportunities</p>
 
         </br>
 
