--- a/index.html
+++ b/index.html
@@ -878,6 +878,15 @@
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
+            <a href="https://doi.org/10.3390/e24101398">[Link]</a>
+            <a href="https://www.mdpi.com/journal/entropy/editors_choice">[Link]</a>
+            Editor's Choice Article, Entropy (2024). For the paper: "Information Theory for Biological Sequence Classification: A Novel Feature Extraction Technique Based on Tsallis Entropy." Recognized by the journal's Academic Editor as an exceptional contribution to the field. The article is featured in Entropy's special edition dedicated to showcasing groundbreaking research.
+           </li>
+
+          </br>
+
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
             <a href="https://sei.utfpr.edu.br/sei/publicacoes/controlador_publicacoes.php?acao=publicacao_visualizar&id_documento=4384974&id_orgao_publicacao=0">[Link]</a>
             1 place in the UTFPR-CP Public Contest, position of Effective Federal Professor, Paraná, Brazil.
            </li>
